--- a/Resources/Private/Templates/Administration/Index.html
+++ b/Resources/Private/Templates/Administration/Index.html
@@ -2,6 +2,14 @@
   <f:layout name="Module" />
 
   <f:section name="Content">
-    <p>{title}</p>
+    <ul class="pagination">
+      <f:for each="{pagination.allPageNumbers}" as="page">
+        <li class="page-item">
+          <f:link.action arguments="{currentPageNumber:page}" class="page-link {f:if(condition:'{currentPageNumber}=={page}',then:'active')}"> {page} </f:link.action>
+        </li>
+      </f:for>
+    </ul>
+
+    <f:for each="{paginator.paginatedItems}" as="item"> {item} </f:for>
   </f:section>
 </html>
