--- a/Resources/Private/Templates/Administration/Index.html
+++ b/Resources/Private/Templates/Administration/Index.html
@@ -2,14 +2,67 @@
   <f:layout name="Module" />
 
   <f:section name="Content">
+    <div id="formhandler-module">
+      <div class="col-xs-4 last"></div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="table-fit">
+            <table class="table table-striped table-hover">
+              <thead>
+                <tr>
+                  <th><f:translate key="LLL:EXT:formhandler/Resources/Private/Language/locallang_db.xlf:form_page_id" /></th>
+                  <th><f:translate key="LLL:EXT:formhandler/Resources/Private/Language/locallang_db.xlf:form_name" /></th>
+                  <th><f:translate key="LLL:EXT:formhandler/Resources/Private/Language/locallang_db.xlf:crdate" /></th>
+                  <th><f:translate key="LLL:EXT:formhandler/Resources/Private/Language/locallang_db.xlf:ip" /></th>
+                  <th></th>
+                  <th>
+                    <div class="btn-group process-selected-actions" role="group">
+                      <f:form method="post" action="selectFields" id="process-selected-form-export">
+                        <f:form.hidden name="filetype" class="filetype"/>
+                        <f:form.hidden name="logDataUids" class="logDataUids"/>
+                      </f:form>
+                      <a class="btn btn-default select-all" rel="" href="#" title="{f:translate(key: 'label.select-all-rows')}">
+                        <core:icon identifier="actions-document-select" />
+                      </a>
+                      <a href="#" class="btn btn-default pdf">PDF</a>
+                      <a href="#" class="btn btn-default csv">CSV</a>
+                    </div>
+                  </th>
+                </tr>
+              </thead>
+              <tbody>
+                <f:for each="{paginator.paginatedItems}" as="logEntry">
+                  <tr>
+                    <td>{logEntry.formPageId}</td>
+                    <td>{logEntry.formName}</td>
+                    <td><f:format.date format="d.m.Y H:i:s">{logEntry.crdate}</f:format.date></td>
+                    <td>{logEntry.ip}</td>
+                    <td>
+                      <f:link.action action="detail" controller="Administration" class="btn btn-default" arguments="{log: logEntry.uid}"><core:icon identifier="actions-document-view" /></f:link.action>
+                      <f:link.action action="selectFields" class="btn btn-default" arguments="{logDataUids: logEntry.uid, filetype: 'pdf'}"> PDF </f:link.action>
+                      <f:link.action action="selectFields" class="btn btn-default" arguments="{logDataUids: logEntry.uid, filetype: 'csv'}"> CSV </f:link.action>
+                    </td>
+                    <td>
+                      <label class="btn btn-default btn-checkbox">
+                        <input type="checkbox" name="marked[]" value="{logDataRow.uid}" class="mark-row">
+                        <span class="t3-icon fa"></span>
+                      </label>
+                    </td>
+                  </tr>
+                </f:for>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <ul class="pagination">
       <f:for each="{pagination.allPageNumbers}" as="page">
         <li class="page-item">
-          <f:link.action arguments="{currentPageNumber:page}" class="page-link {f:if(condition:'{currentPageNumber}=={page}',then:'active')}"> {page} </f:link.action>
+          <f:link.action arguments="{logPage:page}" class="page-link {f:if(condition:'{logPage}=={page}',then:'active')}"> {page} </f:link.action>
         </li>
       </f:for>
     </ul>
-
-    <f:for each="{paginator.paginatedItems}" as="item"> {item} </f:for>
   </f:section>
 </html>
