--- a/Resources/Private/Templates/Administration/SelectFields.html
+++ b/Resources/Private/Templates/Administration/SelectFields.html
@@ -2,41 +2,47 @@
   <f:layout name="Module" />
 
   <f:section name="Content">
-    <f:for each="{fieldsToShow}" as="fieldValues" key="fieldGroupName">
-      <div class="row">
-        <div class="col-xs-12">
-          <div class="table-fit">
-            <table class="table table-striped table-hover">
-              <thead>
-                <tr>
-                  <th>
-                    <a class="btn btn-default checkAll select-all" rel="" href="#" title="{f:translate(key: 'label.select-all-rows')}">
-                      <core:icon identifier="actions-document-select" />
-                    </a>
-                  </th>
-                  <th style="width: 99%">{fieldGroupName}</th>
-                </tr>
-              </thead>
-              <tbody>
-                <f:for each="{fieldValues}" as="field">
-                  <tr>
-                    <td>
-                      <label class="btn btn-default btn-checkbox">
-                        <f:form.checkbox id="tx_formhandler_logdata_{field}" name="fields[]" value="{field}" />
-                        <span class="t3-icon fa"></span>
-                      </label>
-                    </td>
-                    <td><label for="tx_formhandler_logdata_{field}">{field}</label></td>
-                  </tr>
-                </f:for>
-              </tbody>
-            </table>
+    <div id="formhandler-module">
+      <f:form action="export" method="post" controller="Administration" enctype="multipart/form-data" additionalAttributes="{fileType: fileType}">
+        <f:form.hidden name="fileType" value="{fileType}" />
+        <f:form.hidden name="logDataUids" value="{logDataUids}" />
+
+        <f:for each="{fieldsToShow}" as="fieldValues" key="fieldGroupName">
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="table-fit">
+                <table class="table table-striped table-hover">
+                  <thead>
+                    <tr>
+                      <th>
+                        <a class="btn btn-default checkAll select-all" rel="" href="#" title="{f:translate(key: 'LLL:EXT:formhandler/Resources/Private/Language/locallang_be:label.select-all-rows')}">
+                          <core:icon identifier="actions-document-select" />
+                        </a>
+                      </th>
+                      <th style="width: 99%">{fieldGroupName}</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <f:for each="{fieldValues}" as="field">
+                      <tr>
+                        <td>
+                          <label class="btn btn-default btn-checkbox">
+                            <f:form.checkbox id="tx_formhandler_logdata_{field}" class="selectCheckbox" name="fields[]" value="{field}" />
+                            <span class="t3-icon fa"></span>
+                          </label>
+                        </td>
+                        <td><label for="tx_formhandler_logdata_{field}">{field}</label></td>
+                      </tr>
+                    </f:for>
+                  </tbody>
+                </table>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-    </f:for>
-    <f:comment>
-      <f:be.pageRenderer pageTitle="title" includeJsFiles="{0: '{f:uri.resource(path:\'JavaScript/test.js\')}'}" />
-    </f:comment>
+        </f:for>
+        <f:form.submit value="{f:translate(key: 'LLL:EXT:formhandler/Resources/Private/Language/locallang_be:button.export')}" class="btn btn-primary" />
+        <f:link.action action="index" controller="Administration" additionalParams="{logPage: logPage}" class="btn btn-default">Back to list</f:link.action>
+      </f:form>
+    </div>
   </f:section>
 </html>
