--- a/Resources/Private/Templates/Administration/Index.html
+++ b/Resources/Private/Templates/Administration/Index.html
@@ -7,20 +7,20 @@
         <f:form action="index" method="post" controller="Administration" enctype="multipart/form-data">
           <div class="form-group">
             <label for="tx_formhandler_logdata_pid"><f:translate key="LLL:EXT:formhandler/Resources/Private/Language/locallang_be.xlf:label.form_page_id" /></label>
-            <f:form.textfield id="tx_formhandler_logdata_pid" name="formPageId" class="form-control input-sm"/>
+            <f:form.textfield id="tx_formhandler_logdata_pid" name="formPageId" value="{defaultValues.formPageId}" class="form-control input-sm"/>
           </div>
           <div class="form-group">
             <label for="tx_formhandler_logdata_ip"><f:translate key="LLL:EXT:formhandler/Resources/Private/Language/locallang_be.xlf:label.ip" /></label>
-            <f:form.textfield id="tx_formhandler_logdata_ip" name="ip" class="form-control input-sm"/>
+            <f:form.textfield id="tx_formhandler_logdata_ip" name="ip" value="{defaultValues.ip}" class="form-control input-sm"/>
           </div>
           <div class="form-group">
             <label for="tx_formhandler_logdata_formName"><f:translate key="LLL:EXT:formhandler/Resources/Private/Language/locallang_be.xlf:label.form_name" /></label>
-            <f:form.textfield id="tx_formhandler_logdata_formName" name="formName" class="form-control input-sm"/>
+            <f:form.textfield id="tx_formhandler_logdata_formName" name="formName" value="{defaultValues.formName}" class="form-control input-sm"/>
           </div>
           <div class="form-group">
             <label for="tx_formhandler_logdata_start"><f:translate key="LLL:EXT:formhandler/Resources/Private/Language/locallang_be.xlf:label.start" /></label>
             <div class="input-group input-group-sm">
-              <f:form.textfield type="datetime" name="startDate" id="timeRestriction" class="form-control t3js-datetimepicker t3js-clearable" data="{date-type:'datetime',date-offset:'0'}" />
+              <f:form.textfield type="datetime" name="startDate" value="{defaultValues.startDate->f:format.date(format: 'H:i d-m-Y')}" id="timeRestriction" class="form-control t3js-datetimepicker t3js-clearable" data="{date-type:'datetime',date-offset:'0'}" />
               <span class="input-group-btn">
                 <button class="btn btn-default" type="button" data-global-event="click" data-action-focus="#tceforms-datetimefield-task_start_row">
                   <core:icon identifier="actions-edit-pick-date" />
@@ -31,7 +31,7 @@
           <div class="form-group">
             <label for="tx_formhandler_logdata_start"><f:translate key="LLL:EXT:formhandler/Resources/Private/Language/locallang_be.xlf:label.end" /></label>
             <div class="input-group input-group-sm">
-              <f:form.textfield type="datetime" name="endDate" id="timeRestriction" class="form-control t3js-datetimepicker t3js-clearable" data="{date-type:'datetime',date-offset:'0'}" />
+              <f:form.textfield type="datetime" name="endDate" value="{defaultValues.endDate->f:format.date(format: 'H:i d-m-Y')}" id="timeRestriction" class="form-control t3js-datetimepicker t3js-clearable" data="{date-type:'datetime', date-offset:'0'}" />
               <span class="input-group-btn">
                 <button class="btn btn-default" type="button" data-global-event="click" data-action-focus="#tceforms-datetimefield-task_start_row">
                   <core:icon identifier="actions-edit-pick-date" />
@@ -43,7 +43,7 @@
             <label for="tx_formhandler_logdata_show"><f:translate key="LLL:EXT:formhandler/Resources/Private/Language/locallang_be.xlf:label.show" /></label>
             <f:form.select id="tx_formhandler_logdata_show" class="form-control" name="show" options="{10:10, 50:50, 100:100, 1000:1000}"/>
           </div>
-          <f:form.submit value="{f:translate(key: 'LLL:EXT:formhandler/Resources/Private/Language/locallang_be:button.export')}" class="btn btn-primary" />
+          <f:form.submit value="Filter" class="btn btn-primary" />
         </f:form>
       </div>
       <div class="row">
@@ -98,7 +98,7 @@
     <ul class="pagination">
       <f:for each="{pagination.allPageNumbers}" as="page">
         <li class="page-item">
-          <f:link.action arguments="{logPage:page}" class="page-link {f:if(condition:'{logPage}=={page}',then:'active')}"> {page} </f:link.action>
+          <f:link.action arguments="{logPage:page, ip: defaultValues.ip, formPageId: defaultValues.formPageId, formName: defaultValues.formName, endDate: defaultValues.endDate, startDate: defaultValues.startDate}" class="page-link {f:if(condition:'{logPage}=={page}',then:'active')}"> {page} </f:link.action>
         </li>
       </f:for>
     </ul>
