--- a/Resources/Private/Templates/Administration/Index.html
+++ b/Resources/Private/Templates/Administration/Index.html
@@ -3,21 +3,21 @@
 
   <f:section name="Content">
     <div id="formhandler-module">
-      <div class="col-xs-4 last">
+      <div class="row">
         <f:form action="index" method="post" controller="Administration" enctype="multipart/form-data">
-          <div class="form-group">
+          <div class="col col-md-12 form-group">
             <label for="tx_formhandler_logdata_pid"><f:translate key="LLL:EXT:formhandler/Resources/Private/Language/locallang_be.xlf:label.form_page_id" /></label>
             <f:form.textfield id="tx_formhandler_logdata_pid" name="formPageId" value="{defaultValues.formPageId}" class="form-control input-sm"/>
           </div>
-          <div class="form-group">
+          <div class="col col-md-12 form-group">
             <label for="tx_formhandler_logdata_ip"><f:translate key="LLL:EXT:formhandler/Resources/Private/Language/locallang_be.xlf:label.ip" /></label>
             <f:form.textfield id="tx_formhandler_logdata_ip" name="ip" value="{defaultValues.ip}" class="form-control input-sm"/>
           </div>
-          <div class="form-group">
+          <div class="col col-md-12 form-group">
             <label for="tx_formhandler_logdata_formName"><f:translate key="LLL:EXT:formhandler/Resources/Private/Language/locallang_be.xlf:label.form_name" /></label>
             <f:form.textfield id="tx_formhandler_logdata_formName" name="formName" value="{defaultValues.formName}" class="form-control input-sm"/>
           </div>
-          <div class="form-group">
+          <div class="col col-md-12 form-group">
             <label for="tx_formhandler_logdata_start"><f:translate key="LLL:EXT:formhandler/Resources/Private/Language/locallang_be.xlf:label.start" /></label>
             <div class="input-group input-group-sm">
               <f:form.textfield type="datetime" name="startDate" value="{defaultValues.startDate->f:format.date(format: 'H:i d-m-Y')}" id="timeRestriction" class="form-control t3js-datetimepicker t3js-clearable" data="{date-type:'datetime',date-offset:'0'}" />
@@ -28,7 +28,7 @@
               </span>
             </div>
           </div>
-          <div class="form-group">
+          <div class="col col-md-12 form-group">
             <label for="tx_formhandler_logdata_start"><f:translate key="LLL:EXT:formhandler/Resources/Private/Language/locallang_be.xlf:label.end" /></label>
             <div class="input-group input-group-sm">
               <f:form.textfield type="datetime" name="endDate" value="{defaultValues.endDate->f:format.date(format: 'H:i d-m-Y')}" id="timeRestriction" class="form-control t3js-datetimepicker t3js-clearable" data="{date-type:'datetime', date-offset:'0'}" />
@@ -39,13 +39,14 @@
               </span>
             </div>
           </div>
-          <div class="form-group">
+          <div class="col col-md-12 form-group">
             <label for="tx_formhandler_logdata_show"><f:translate key="LLL:EXT:formhandler/Resources/Private/Language/locallang_be.xlf:label.show" /></label>
             <f:form.select id="tx_formhandler_logdata_show" class="form-control" value="{defaultValues.itemsPerPage}" name="itemsPerPage" options="{10:10, 50:50, 100:100, 1000:1000}"/>
           </div>
           <f:form.submit value="Filter" class="btn btn-primary" />
         </f:form>
       </div>
+      <br>
       <div class="row">
         <div class="col-xs-12">
           <div class="table-fit">
