--- a/Resources/Private/Templates/Administration/Index.html
+++ b/Resources/Private/Templates/Administration/Index.html
@@ -79,7 +79,7 @@
                     <td><f:format.date format="d.m.Y H:i:s">{logEntry.crdate}</f:format.date></td>
                     <td>{logEntry.ip}</td>
                     <td>
-                      <f:link.action action="detail" controller="Administration" class="btn btn-default" arguments="{log: logEntry.uid}"><core:icon identifier="actions-document-view" /></f:link.action>
+                      <f:link.action action="detail" controller="Administration" class="btn btn-default" arguments="{log: logEntry.uid, logPage: logPage, itemsPerPage: defaultValues.itemsPerPage, ip: defaultValues.ip, formPageId: defaultValues.formPageId, formName: defaultValues.formName, endDate: endDateFormatted, startDate: startDateFormatted}"><core:icon identifier="actions-document-view" /></f:link.action>
                       <f:link.action action="selectFields" class="btn btn-default disabled" arguments="{logDataUids: logEntry.uid, filetype: 'pdf'}"> PDF </f:link.action>
                       <f:link.action action="selectFields" class="btn btn-default" arguments="{logDataUids: logEntry.uid, filetype: 'csv'}"> CSV </f:link.action>
                     </td>
@@ -101,7 +101,7 @@
     <ul class="pagination">
       <f:for each="{pagination.allPageNumbers}" as="page">
         <li class="page-item">
-          <f:link.action arguments="{logPage:page, ip: defaultValues.ip, formPageId: defaultValues.formPageId, formName: defaultValues.formName, endDate: endDateFormatted, startDate: startDateFormatted}" class="page-link {f:if(condition:'{logPage}=={page}',then:'active')}"> {page} </f:link.action>
+          <f:link.action arguments="{logPage: page, itemsPerPage: defaultValues.itemsPerPage, ip: defaultValues.ip, formPageId: defaultValues.formPageId, formName: defaultValues.formName, endDate: endDateFormatted, startDate: startDateFormatted}" class="page-link {f:if(condition:'{logPage}=={page}',then:'active')}"> {page} </f:link.action>
         </li>
       </f:for>
     </ul>
